--- a/.github/workflows/test_format.yaml
+++ b/.github/workflows/test_format.yaml
@@ -11,6 +11,6 @@ jobs:
         with:
           go-version: 1.17
       - name: Test
-        run: go test
+        run: go test ./...
       - name: Check format
         run: test -z "$(gofmt -l .)"
